# qaguru_17_20_1

./: .gitignore  README.md  config.py  pyproject.toml
tests/: conftest.py
tests/android/: test_app_wikipedia.py  test_wiki_at_device_emulator.py  test_wiki_in_browserstack.py
tests/web/: test_wiki_in_local.py
utils/: allure_attach.py
